# task_system

./: .gitignore  Dockerfile  README.md  celery_app.py  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  runapp.sh  something.py  submit_task.py  tasks.py  test.py
lib/: browser.py  claude_api.py  llm.py  tts.py
myproject/: requirements.txt
myproject/celery_app/: celery.py
myproject/config/: settings.py
myproject/tasks/: example_tasks.py
myproject/tests/: test_tasks.py
tasks/: example_tasks.py  math_tasks.py  process_tasks.py
tests/: test_integration.py  test_tasks.py
tests/lib/: test_llm.py
