[project]
name = "celery_claude_app"
version = "0.1.0"
description = "A simple Celery app that communicates with Claude API"
requires-python = ">=3.12"
dependencies = [
    "celery",
    "redis",
    "pyaudio",
    "pytest",
    "keyboard",
    "openai-whisper",
    "anthropic",
    "litellm",
    "browser-use",
    "langchain-openai",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-celery",
]
